<resources>
    <string name="app_name" translatable="false">QUIK Forward</string>
    <string name="shortcut_compose_long_label">New conversation</string>
    <string name="shortcut_compose_short_label">Compose</string>
    <string name="shortcut_compose_disabled_message">Shortcut disabled</string>
    <string name="title_archived">Archived</string>
    <string name="title_settings">Settings</string>
    <string name="title_notification_prefs">Notifications</string>
    <string name="title_theme">Theme</string>
    <string name="title_conversations">Search inbox…</string>
    <string name="title_compose">Type a name or number</string>
    <string name="title_qksms_plus" translatable="false">If you see this, send in an issue please!</string>
    <string name="setup_skip">Skip</string>
    <string name="setup_next">Continue</string>
    <string name="menu_add_person">Add person</string>
    <string name="menu_call">Call</string>
    <string name="menu_info">Details</string>
    <string name="menu_mms_part_save">Save to gallery</string>
    <string name="menu_mms_part_share">Share</string>
    <string name="menu_mms_part_forward">Forward</string>
    <string name="menu_mms_part_open">Open externally</string>
    <string name="main_drawer_open_cd">Open navigation drawer</string>
    <string name="main_title_selected">%d selected</string>
    <string name="main_menu_clear">Clear</string>
    <string name="main_menu_select_all">Select all</string>
    <string name="main_menu_archive">Archive</string>
    <string name="main_menu_unarchive">Unarchive</string>
    <string name="main_menu_delete">Delete</string>
    <string name="main_menu_add_contact">Add to contacts</string>
    <string name="main_menu_pin">Pin to top</string>
    <string name="main_menu_unpin">Unpin</string>
    <string name="main_menu_read">Mark read</string>
    <string name="main_menu_unread">Mark unread</string>
    <string name="main_menu_block">Block</string>
    <string name="main_menu_send_now">Send now</string>
    <string name="main_menu_edit_message">Edit message</string>
    <string name="main_menu_rename_conversation">Rename conversation</string>
    <string name="main_syncing">Syncing messages…</string>
    <string name="main_sync_emojis">Parsing emoji reactions…</string>
    <string name="main_sender_you">You: %s</string>
    <string name="main_sender_draft">Draft: %s</string>
    <string name="main_message_results_title">Results in messages</string>
    <string name="main_message_results">%d messages</string>
    <string name="inbox_empty_text">Your conversations will appear here</string>
    <string name="inbox_search_empty_text">No results</string>
    <string name="archived_empty_text">Your archived conversations will appear here</string>
    <string name="main_fab_cd">Start new conversation</string>
    <string name="main_default_sms_title">Love texting again</string>
    <string name="main_default_sms_message">Make QUIK your default SMS app</string>
    <string name="main_default_sms_change">Change</string>
    <string name="main_permission_required">Permission required</string>
    <string name="main_permission_sms">QUIK needs permission to send and view SMS messages</string>
    <string name="main_permission_contacts">QUIK needs permission to view your contacts</string>
    <string name="main_permission_notifications">QUIK needs permission to display notifications</string>
    <string name="main_permission_allow">Allow</string>
    <string name="scheduled_menu_send_now">Send now</string>
    <string name="scheduled_menu_edit_message">Edit message</string>
    <string name="drawer_inbox">Inbox</string>
    <string name="drawer_archived">Archived</string>
    <string name="drawer_scheduled">Scheduled</string>
    <string name="drawer_blocking">Blocking</string>
    <string name="drawer_more">More</string>
    <string name="message_management_title">Message Management</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_plus" translatable="false">DEPRECATED - drawer_plus</string>
    <string name="drawer_help">Help &amp; feedback</string>
    <string name="drawer_invite">Invite friends</string>
    <string name="drawer_plus_banner_title" translatable="false">DEPRECATED - drawer_plus_banner_title</string>
    <string name="drawer_plus_banner_summary">Unlock amazing new features, and support development</string>
    <string name="rate_title">Enjoying QUIK?</string>
    <string name="rate_summary">Share some love and leave us a Star on GitHub!</string>
    <string name="rate_okay">OKAY!</string>
    <string name="rate_dismiss">DISMISS</string>
    <string name="dialog_delete_title">Delete</string>
    <plurals name="dialog_delete_message">
        <item quantity="one">Are you sure you would like to delete this conversation?</item>
        <item quantity="other">Are you sure you would like to delete %d conversations?</item>
    </plurals>
    <plurals name="dialog_delete_chat">
        <item quantity="one">Are you sure you would like to delete this message?</item>
        <item quantity="other">Are you sure you would like to delete %d messages?</item>
    </plurals>
    <plurals name="dialog_send_now">
        <item quantity="one">Are you sure you would like to send this message now?</item>
        <item quantity="other">Are you sure you would like to send %d messages now?</item>
    </plurals>
    <string name="dialog_edit_scheduled_message_title">Edit message</string>
    <string name="dialog_edit_scheduled_message">Editing this message will remove it from the schedule.\n\nMake sure to re-submit it on the next screen, or it will be lost.\n\nDo you want to continue?</string>
    <string name="dialog_edit_scheduled_message_positive_button">Yes, edit the message</string>
    <string name="dialog_clear_compose_title">Clear message</string>
    <string name="dialog_clear_compose">Clear the message? This action can\'t be undone.</string>
    <string-array name="message_options">
        <item>Copy text</item>
        <item>Forward</item>
        <item>Delete</item>
    </string-array>
    <string name="compose_number_picker_title">Choose a phone number</string>
    <string name="compose_number_picker_default">%s ∙ Default</string>
    <string name="compose_number_picker_once">Just once</string>
    <string name="compose_number_picker_always">Always</string>
    <string name="compose_title_selected">%d selected</string>
    <string name="compose_subtitle_results">%1$d of %2$d results</string>
    <string name="compose_send_group_title">Group messaging</string>
    <string name="compose_send_group_summary_on">Recipients and replies will be visible to everyone</string>
    <string name="compose_send_group_summary_off">BCC: send a separate private message to each recipient</string>
    <string name="compose_messages_empty">This is the start of your conversation. Say something nice!</string>
    <string name="compose_vcard_label">Contact card</string>
    <string name="settings_forwarding_title">SMS/MMS email forwarding</string>
    <string name="settings_forwarding_summary">Forward accepted messages through your SMTP server</string>
    <string name="forwarding_title">Email forwarding</string>
    <string name="forwarding_enabled">Enable forwarding</string>
    <string name="forwarding_message_types">Message directions and types</string>
    <string name="forwarding_incoming_sms">Incoming SMS</string>
    <string name="forwarding_incoming_mms">Incoming MMS</string>
    <string name="forwarding_outgoing_sms">Outgoing SMS</string>
    <string name="forwarding_outgoing_mms">Outgoing MMS</string>
    <string name="forwarding_rules">Allow and deny rules</string>
    <string name="forwarding_allow_only">Allowlisted only (deny always wins)</string>
    <string name="forwarding_rules_explanation">Rules can match an exact address/contact, literal message text, or a safe RE2 regular expression. Each rule has incoming/outgoing and SMS/MMS scopes.</string>
    <string name="forwarding_add_allow">Add allow</string>
    <string name="forwarding_add_deny">Add deny</string>
    <string name="forwarding_smtp">SMTP (TLS required)</string>
    <string name="forwarding_smtp_host">SMTP host</string>
    <string name="forwarding_smtp_port">SMTP port</string>
    <string name="forwarding_smtp_username">Username (optional)</string>
    <string name="forwarding_smtp_password">App password (leave blank to keep stored value)</string>
    <string name="forwarding_from_address">From email address</string>
    <string name="forwarding_recipients">Forward to (one email address per line)</string>
    <string name="forwarding_bcc_recipients">Send forwarding recipients using BCC</string>
    <string name="forwarding_bcc_recipients_summary">When disabled, destination addresses appear in the visible To header.</string>
    <string name="forwarding_save">Save</string>
    <string name="forwarding_saved">Forwarding settings saved</string>
    <string name="forwarding_saved_not_verified">Settings saved; forwarding remains off until the SMTP test succeeds</string>
    <string name="forwarding_test">Test connection</string>
    <string name="forwarding_test_failed">SMTP test failed: %1$s</string>
    <string name="forwarding_test_failed_unknown">Unknown error</string>
    <string name="forwarding_verified">SMTP settings verified</string>
    <string name="forwarding_not_verified">Test these SMTP settings before enabling forwarding</string>
    <string name="compose_scheduled_for">Scheduled time:</string>
    <string name="compose_scheduled_future">Selected time must be in the future!</string>
    <string name="compose_scheduled_plus">You must unlock QUIK+ to use scheduled messaging</string>
    <string name="compose_scheduled_toast">Added to scheduled messages</string>
    <string name="compose_scheduled_view">Scheduled messages for this conversation</string>
    <string name="compose_hint">Write a message…</string>
    <string name="compose_no_valid_recipients">Can\'t send to other participants</string>
    <string name="compose_menu_copy">Copy text</string>
    <string name="compose_menu_share">Share text</string>
    <string name="compose_menu_forward">Forward</string>
    <string name="compose_menu_show_status">Show status</string>
    <string name="compose_menu_delete">Delete</string>
    <string name="compose_menu_previous">Previous</string>
    <string name="compose_menu_next">Next</string>
    <string name="compose_menu_clear">Clear</string>
    <string name="compose_details_title">Message details</string>
    <string name="compose_reactions_title">Reactions</string>
    <string name="compose_details_type">Type: %s</string>
    <string name="compose_details_from">From: %s</string>
    <string name="compose_details_to">To: %s</string>
    <string name="compose_details_subject">Subject: %s</string>
    <string name="compose_details_priority">Priority: %s</string>
    <string name="compose_details_size">Size: %s</string>
    <string name="compose_details_sent">Sent: %s</string>
    <string name="compose_details_received">Received: %s</string>
    <string name="compose_details_delivered">Delivered: %s</string>
    <string name="compose_details_error_code">Error code: %d</string>
    <string name="compose_attach_cd">Add an attachment</string>
    <string name="compose_attach_file_cd">Attach any file</string>
    <string name="compose_gallery_cd">Attach a photo</string>
    <string name="compose_audio_message_cd">Record an audio message</string>
    <string name="compose_camera_cd">Take a photo</string>
    <string name="compose_schedule_cd">Schedule message</string>
    <string name="compose_schedule_cancel_cd">Cancel schedule message</string>
    <string name="compose_contact_cd">Attach a contact</string>
    <string name="compose_contact_error">Error reading contact</string>
    <string name="compose_sim_changed_toast">SIM %1$d (%2$s) selected</string>
</resources>